# turtle-graphics

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile
src/: CLIButtons.qml  ControlPanel.qml  Main.qml  ObstacleControls.qml  main.cpp
src/modules/CLI/: CMakeLists.txt
src/modules/CLI/src/: CLI.cpp  CLI.hpp
src/modules/Canvas/: CMakeLists.txt
src/modules/Canvas/src/: canvas.cpp  canvas.hpp
src/modules/Obstacle/: CMakeLists.txt
src/modules/Obstacle/src/: obstacle.cpp  obstacle.hpp
src/modules/Parser/: CMakeLists.txt
src/modules/Parser/src/: parser.cpp  parser.hpp
src/modules/SaveLoadManager/: CMakeLists.txt
src/modules/SaveLoadManager/src/: SaveLoadManager.cpp  SaveLoadManager.hpp
src/modules/Turtle/: CMakeLists.txt  Turtle.qml
src/modules/Turtle/src/: turtlecontrol.cpp  turtlecontrol.h
src/resources/scripts/: circles.txt  color.txt  cross.txt  script.txt  spiral.txt  square.txt  squarespiral.txt  triacontakaihexaklad.txt  wall.txt
tests/: generate_parser_testscript_fuzz.cpp
tests/testcanvas/: CMakeLists.txt  tst_testcanvas.cpp
tests/testsaveloadmanager/: CMakeLists.txt  tst_testsaveloadmanager.cpp
tests/testturtle/: CMakeLists.txt  tst_testturtle.cpp
